--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@ $font-mint: rgb(228, 245, 241);
 $black-green: rgb(10, 22, 15);
 $light-grey: rgb(194, 194, 194);
 $dark-grey: rgb(100, 100, 100);
-$almond-brown : #be7b40;
+$almond-brown: #be7b40;
 body {
 	background-color: rgb(245, 245, 245);
 }
@@ -313,46 +313,46 @@ nav {
 
 		.carousel-indicators li {
 			height: 15px;
-			width:15px;
+			width: 15px;
 			border-radius: 50%;
-			&.active{
-				background-color:$font-mint;
+			&.active {
+				background-color: $font-mint;
 			}
-			&:not(.active){
+			&:not(.active) {
 				background-color: $muted;
 				opacity: 1;
 			}
 		}
-		.carousel-inner{
-			.carousel-item{
-				height:400px;	
+		.carousel-inner {
+			.carousel-item {
+				height: 400px;
 			}
 		}
 	}
 }
-.location{
+.location {
 	display: flex;
 	align-items: center;
-	justify-content:center;
+	justify-content: center;
 	width: 100%;
 	height: 100vh;
-	.location-description{
+	.location-description {
 		width: 40%;
 		text-align: right;
-		h2{
-			font-family: 'Roboto Slab';
+		h2 {
+			font-family: "Roboto Slab";
 			color: $almond-brown;
-			width:70%;
+			width: 70%;
 		}
-		h5{
-			font-family: 'Nunito Sans';
+		h5 {
+			font-family: "Nunito Sans";
 			line-height: 2rem;
 			color: $dark-grey;
-			width:70%;
+			width: 70%;
 		}
 	}
-	.location-image{
-		width:40%;
+	.location-image {
+		width: 40%;
 		height: 80%;
 		background-image: url("../img/sb1.png");
 		background-size: contain;
@@ -360,14 +360,52 @@ nav {
 		filter: hue-rotate(310deg);
 		background-repeat: no-repeat;
 		position: relative;
-		.text{
+		.text {
 			position: absolute;
 			top: 24%;
-			left:46%;
+			left: 46%;
 			font-weight: bold;
-			width:20%;
+			width: 20%;
 			color: rgb(0, 128, 96);
-			font-family: 'Roboto Slab';
+			font-family: "Roboto Slab";
 		}
+	}
+}
+footer {
+	height: 100vh;
+	width: 100%;
+	background-image: url("../img/footer5.jpg");
+	background-size: cover;
+	position: relative;
+	img {
+		position: absolute;
+		width: 50%;
+		filter: brightness(1.1);
+	}
+	img:nth-child(3) {
+		top: -22%;
+		right: 75%;
+	}
+	img:nth-child(2) {
+		top: -30%;
+		right: 0%;
+	}
+	img:nth-child(4) {
+		top: -23%;
+		left: 10%;
+	}
+	.white-transition {
+		padding: 8px;
+		border-radius: 8px;
+		position: absolute;
+		z-index: 50;
+		width: 100%;
+		height: 70%;
+		background: -webkit-linear-gradient(
+			top,
+			rgba(255, 255, 255, 1) 20%,
+			rgba(255, 255, 255, 0.5) 70%,
+			rgba(255, 255, 255, 0) 100%
+		);
 	}
 }
