--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,7 +436,7 @@ nav .navbar-nav .nav-item .nav-link.hover:before {
 
 .location .location-description {
   width: 40%;
-  text-align: right;
+  text-align: left;
 }
 
 .location .location-description h2 {
@@ -489,17 +489,17 @@ footer img {
           filter: brightness(1.1);
 }
 
-footer img:nth-child(3) {
+footer .clouds:nth-child(3) {
   top: -22%;
   right: 75%;
 }
 
-footer img:nth-child(2) {
+footer .clouds:nth-child(2) {
   top: -30%;
   right: 0%;
 }
 
-footer img:nth-child(4) {
+footer .clouds:nth-child(4) {
   top: -23%;
   left: 10%;
 }
@@ -512,5 +512,32 @@ footer .white-transition {
   width: 100%;
   height: 70%;
   background: -webkit-linear-gradient(top, white 20%, rgba(255, 255, 255, 0.5) 70%, rgba(255, 255, 255, 0) 100%);
+}
+
+footer .social-media {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+footer .social-media img {
+  margin-right: 2rem;
+  position: relative;
+  width: 30px;
+}
+
+footer .social-media .logo:nth-child(3) {
+  -webkit-filter: hue-rotate(180deg);
+          filter: hue-rotate(180deg);
 }
 /*# sourceMappingURL=style.css.map */
