--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -530,13 +530,35 @@ footer .social-media {
           justify-content: center;
 }
 
-footer .social-media img {
-  margin-right: 2rem;
+footer .social-media .icon-box {
   position: relative;
+  width: 15%;
+  background-color: rgba(255, 255, 255, 0.95);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 2rem;
+  -webkit-box-shadow: 0px 0px 50px 0px #bddae2;
+          box-shadow: 0px 0px 50px 0px #bddae2;
+}
+
+footer .social-media .icon-box img {
+  position: relative;
+  margin-right: 2rem;
   width: 30px;
 }
 
-footer .social-media .logo:nth-child(3) {
+footer .social-media .icon-box .logo:nth-child(1) {
+  margin-left: 2rem;
+}
+
+footer .social-media .icon-box .logo:nth-child(3) {
   -webkit-filter: hue-rotate(180deg);
           filter: hue-rotate(180deg);
 }
