--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -60,7 +60,7 @@ nav {
 }
 //Navbar end
 
-//Welcome-box 
+//Welcome-box
 #welcome-box {
 	background-image: url("../img/background.jpg");
 	background-size: cover;
@@ -435,13 +435,26 @@ footer {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		img {
-			margin-right: 2rem;
+		.icon-box {
 			position: relative;
-			width: 30px;
-		}
-		.logo:nth-child(3){
-			filter: hue-rotate(180deg);
+			width: 15%;
+			background-color: rgba(255, 255, 255, 0.95);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			border-radius: 2rem;
+			box-shadow: 0px 0px 50px 0px rgb(189, 218, 226);
+			img {
+				position: relative;
+				margin-right: 2rem;
+				width: 30px;
+			}
+			.logo:nth-child(1) {
+				margin-left: 2rem;
+			}
+			.logo:nth-child(3) {
+				filter: hue-rotate(180deg);
+			}
 		}
 	}
 }
